@@ -1,5 +1,11 @@
 2008-10-01  Adrian Robert  <Adrian.B.Robert@gmail.com>
 
+	* nsfont.m (nsfont_spec_to_traits): Use UnXX masks only for non-normal
+	styles.
+	(nsfont_open): Reenable the cache.
+
+2008-10-01  Adrian Robert  <Adrian.B.Robert@gmail.com>
+
 	* font.c (font_matching_entity): Reflect ATTRS in font selection.
 	(font_find_for_lface) [HAVE_NS]: Don't ignore case.
 
